change background color

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     height: 800px;
     padding: 40px;
     font-family: poppins;
-    background-color: #F5E9FF;
+    background-color: #f6e8fa;
     display: flex;
     margin: 100px auto;
     border-color: white;
